# vcodeman

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-rtl-gen.md  2026-05-10-dw-flow-refactor.md
docs/superpowers/specs/: 2026-05-07-rtl-gen-design.md  2026-05-10-dw-flow-refactor-design.md
specs/001-filelist-resolver/: plan.md  research.md  spec.md  tasks.md
specs/001-filelist-resolver/checklists/: requirements.md
src/vcodeman/: __init__.py  cli.py  grammar.lark  models.py  parser.py  resolver.py
tests/: conftest.py  test_cli.py  test_models.py  test_parser.py  test_realistic.py  test_resolver.py
tests/filelists/: circular_a.f  circular_b.f  define_opts.f  envvar.f  include_opts.f  libext_opts.f  library_opts.f  mixed_opts.f  nested_level1.f  nested_root.f  simple.f  undefined_var.f
