[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcodeman"
version = "0.1.0"
description = "Verilog-XL HDL filelist parser and analyzer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "vcodeman contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "lark>=1.1.9",
    "sqlalchemy>=2.0.23",
    "click>=8.1.7",
    "tree-sitter>=0.25",
    "tree-sitter-systemverilog>=0.3",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.76",
    "design-workflow",
]

# Resolve `design-workflow` from a specific source. uv picks this up at
# install time; downstream users who can't reach the URL can override
# locally with `uv sync --override` or by adding their own [tool.uv.sources]
# in a workspace pyproject.toml.
[tool.uv.sources]
design-workflow = { git = "https://github.com/dang-ee/design-workflow", branch = "develop" }

# --- Alternative: pull design-workflow from an internal package index ---
# Uncomment the block below (and comment out the git-source line above)
# when an internal PyPI mirror is available.
#
# [[tool.uv.index]]
# name = "internal"
# url = "https://pypi.internal.example.com/simple/"
#
# [tool.uv.sources]
# design-workflow = { index = "internal" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[project.scripts]
vcodeman = "vcodeman.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vcodeman = ["*.lark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = []
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]
